fix: optimize code